--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  graphql_flutter: ^5.2.0-beta.6
 
 
   # The following adds the Cupertino Icons font to your application.
