--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.2
   package_info_plus: ^7.0.0
+  gql: ^1.0.1-alpha+1709845491443
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
