--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.2
   package_info_plus: ^7.0.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
