--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   graphql_flutter: ^5.2.0-beta.6
-
+  mailto: ^2.0.0
+  file_picker: ^5.0.1
+  url_launcher: ^6.2.6
+  fluttertoast: ^8.2.4
+  google_fonts: 6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
