--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   package_info_plus: ^7.0.0
   gql: ^1.0.1-alpha+1709845491443
   html: ^0.15.4
+  sliding_up_panel: ^2.0.0+1
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
