--- a/kobi_3/pubspec.yaml
+++ b/kobi_3/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   html: ^0.15.4
   sliding_up_panel: ^2.0.0+1
   flutter_slidable: ^3.1.0
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
