--- a/kobi_3/android/app/src/main/AndroidManifest.xml
+++ b/kobi_3/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="kobi_3"
+        android:label="KO:BI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
